--- a/serenity-app/res/layout-large-v18/serenity_media_controller.xml
+++ b/serenity-app/res/layout-large-v18/serenity_media_controller.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mediacontroller"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
 
     <TextView
         android:id="@+id/mediacontroller_title"
@@ -33,7 +33,7 @@
         android:maxLines="5"
         tools:ignore="SelectableText" />
 
-    <ImageView
+    <us.nineworlds.serenity.widgets.RoundedImageView
         android:id="@+id/mediacontroller_poster_art"
         android:layout_width="150dp"
         android:layout_height="200dp"
@@ -41,6 +41,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="10dp"
+        app:corner_radius="5dp"
+        app:mutate_background="true"
         android:scaleType="fitXY"
         android:src="@drawable/default_video_cover"
         tools:ignore="ContentDescription" />
