--- a/serenity-app/res/layout-large/poster_tvshow_indicator_view.xml
+++ b/serenity-app/res/layout-large/poster_tvshow_indicator_view.xml
@@ -3,13 +3,15 @@
     android:id="@+id/posterIndicatorView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/gallery_item_background" >
+    android:background="@drawable/gallery_item_background" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
 
-    <ImageView
+    <us.nineworlds.serenity.widgets.RoundedImageView
         android:id="@+id/posterImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        app:corner_radius="5dp"
+        app:mutate_background="true"
         android:scaleType="fitXY" />
 
     <TextView
