Update maven build to use Android L support libraries.
1. Update to use Android L
2. Update to use android-maven-plugin 3.9.0-rc.2
3. Set SDK level to L
4. Fix issue with duplicate attribute names in TwoWayGridView

--- a/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
@@ -104,12 +104,12 @@
         android:padding="5dp"
         android:background="#A0000000"
         app:cacheColorHint="#E8E8E8"
-        app:columnWidth="160dp"
+        app:columnWidth1="160dp"
         app:gravity="center"
         app:horizontalSpacing="16dp"
         app:numColumns="auto_fit"
         app:numRows="3"
-        app:rowHeight="160dp"
+        app:rowHeight1="160dp"
         app:scrollDirectionLandscape="horizontal"
         app:scrollDirectionPortrait="vertical"
         app:stretchMode="spacingWidthUniform"
