--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -1,217 +1,229 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/movieBrowserBackgroundLayout"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/movieBrowserBackgroundLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
 
     <ImageView
-        android:id="@+id/fanArt"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="fitXY" />
+            android:id="@+id/fanArt"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"/>
 
     <LinearLayout
-        android:id="@+id/metaDataRow"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="10dp"
-        android:background="#AA000000"
-        android:orientation="horizontal" >
+            android:id="@+id/metaDataRow"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginRight="10dp"
+            android:background="#BB000000"
+            android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/menu_button"
-            android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:layout_gravity="center_vertical"
-            android:background="@android:color/transparent"
-            android:nextFocusDown="@+id/moviePosterGallery"
-            android:nextFocusLeft="@+id/menu_button"
-            android:nextFocusUp="@+id/menu_button"
-            android:paddingLeft="5dp"
-            android:paddingRight="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/menudrawer_selector" />
+                android:id="@+id/menu_button"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp"
+                android:layout_gravity="center_vertical"
+                android:background="@android:color/transparent"
+                android:nextFocusDown="@+id/moviePosterGallery"
+                android:nextFocusLeft="@+id/menu_button"
+                android:nextFocusUp="@+id/menu_button"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/menudrawer_selector"/>
 
         <TextView
-            android:id="@+id/movieCategoryName"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:focusable="false"
-            android:text="@string/category" />
+                android:id="@+id/movieCategoryName"
+                style="@android:style/TextAppearance.Holo.Medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:text="@string/category"/>
 
         <Spinner
-            android:id="@+id/categoryFilter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/spinner_background"
-            android:focusable="true"
-            android:gravity="left"
-            android:nextFocusDown="@+id/moviePosterGallery"
-            android:nextFocusLeft="@+id/menu_button"
-            android:nextFocusRight="@+id/categoryFilter2"
-            android:prompt="@string/movie_category_prompt"
-            android:spinnerMode="dropdown" />
+                android:id="@+id/categoryFilter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/spinner_background"
+                android:focusable="true"
+                android:gravity="left"
+                android:nextFocusDown="@+id/moviePosterGallery"
+                android:nextFocusLeft="@+id/menu_button"
+                android:nextFocusRight="@+id/categoryFilter2"
+                android:prompt="@string/movie_category_prompt"
+                android:spinnerMode="dropdown"/>
 
         <Spinner
-            android:id="@+id/categoryFilter2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/spinner_background"
-            android:focusable="true"
-            android:gravity="left"
-            android:prompt="@string/movie_category_prompt2"
-            android:spinnerMode="dropdown"
-            android:visibility="invisible" />
+                android:id="@+id/categoryFilter2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/spinner_background"
+                android:focusable="true"
+                android:gravity="left"
+                android:prompt="@string/movie_category_prompt2"
+                android:spinnerMode="dropdown"
+                android:visibility="invisible"/>
 
         <TextView
-            android:id="@+id/subtitleFilter"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:focusable="false"
-            android:text="Subtitle"
-            android:visibility="gone" />
+                android:id="@+id/subtitleFilter"
+                style="@android:style/TextAppearance.Holo.Medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:focusable="false"
+                android:text="Subtitle"
+                android:visibility="gone"/>
 
         <Spinner
-            android:id="@+id/videoSubtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/spinner_background"
-            android:focusable="true"
-            android:gravity="left"
-            android:prompt="@string/movie_category_prompt2"
-            android:spinnerMode="dropdown"
-            android:visibility="gone" />
+                android:id="@+id/videoSubtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/spinner_background"
+                android:focusable="true"
+                android:gravity="left"
+                android:prompt="@string/movie_category_prompt2"
+                android:spinnerMode="dropdown"
+                android:visibility="gone"/>
     </LinearLayout>
 
 
-    <RelativeLayout
-        android:id="@+id/video_details_container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:padding="10dp"
-        android:layout_below="@+id/episodeTVSeriesTitle"
-        android:background="#AA000000" >
-
-        <us.nineworlds.serenity.widgets.RoundedImageView
-            android:id="@+id/video_poster"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
+    <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/video_details_card"
+            android:layout_gravity="center"
+            android:elevation="5dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/episodeTVSeriesTitle"
             android:layout_margin="5dp"
-            app:corner_radius="5dp"
-            app:mutate_background="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true" />
+            card_view:cardBackgroundColor="#D0333333"
+            card_view:cardCornerRadius="10dp">
 
-        <TextView
-            android:id="@+id/movieBrowserPosterTitle"
-            style="@android:style/TextAppearance.Holo.Large"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_toRightOf="@+id/video_poster"
-            android:gravity="left|center_vertical"
-            android:paddingLeft="10dp"
-            android:textColor="#F0F0F0"
-            android:textStyle="bold"
-            tools:ignore="SelectableText" />
-        
-        <TextView
-            android:id="@+id/movieSummary"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/movieBrowserPosterTitle"
-            android:layout_toRightOf="@+id/video_poster"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:ellipsize="marquee"
-            android:maxLines="8"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textColor="#F0F0F0"
-            android:textSize="17.5sp"
-            tools:ignore="SelectableText" />
-        
-        <TextView
-            android:id="@+id/videoTextExtra"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_toRightOf="@+id/video_poster"
-            android:layout_above="@+id/movieInfoGraphicLayout"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:gravity="left"
-            android:textStyle="bold"
-            android:visibility="invisible" />
-               
+        <RelativeLayout
+                android:id="@+id/video_details_container"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="5dp"
+                android:padding="5dp"
+                >
 
-        <LinearLayout
-            android:id="@+id/movieInfoGraphicLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/video_poster"
-            android:layout_toRightOf="@+id/video_poster"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="15dp"
-            android:gravity="bottom"
-            android:layout_centerHorizontal="true"
-            android:orientation="horizontal" >
-        </LinearLayout>
-    </RelativeLayout>
+            <us.nineworlds.serenity.widgets.RoundedImageView
+                    android:id="@+id/video_poster"
+                    android:layout_width="200dp"
+                    android:layout_height="250dp"
+                    android:layout_margin="5dp"
+                    app:corner_radius="5dp"
+                    app:mutate_background="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"/>
+
+            <TextView
+                    android:id="@+id/movieBrowserPosterTitle"
+                    style="@android:style/TextAppearance.Holo.Large"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_toRightOf="@+id/video_poster"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="10dp"
+                    android:textColor="#F0F0F0"
+                    android:textStyle="bold"
+                    tools:ignore="SelectableText"/>
+
+            <TextView
+                    android:id="@+id/movieSummary"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/movieBrowserPosterTitle"
+                    android:layout_toRightOf="@+id/video_poster"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:ellipsize="marquee"
+                    android:maxLines="8"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:textColor="#F0F0F0"
+                    android:textSize="17.5sp"
+                    tools:ignore="SelectableText"/>
+
+            <TextView
+                    android:id="@+id/videoTextExtra"
+                    style="@android:style/TextAppearance.Holo.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_toRightOf="@+id/video_poster"
+                    android:layout_above="@+id/movieInfoGraphicLayout"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:gravity="left"
+                    android:textStyle="bold"
+                    android:visibility="invisible"/>
+
+
+            <LinearLayout
+                    android:id="@+id/movieInfoGraphicLayout"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/video_poster"
+                    android:layout_toRightOf="@+id/video_poster"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:gravity="bottom"
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal">
+            </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 
     <LinearLayout
-        android:id="@+id/tableRow2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dip"
-        android:background="#A0000000"
-        android:gravity="bottom"
-        android:padding="5dp" >
-
-        <us.nineworlds.serenity.widgets.SerenityGallery
-            android:id="@+id/moviePosterGallery"
+            android:id="@+id/tableRow2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|center_vertical"
-            android:nextFocusUp="@+id/categoryFilter"
-            android:spacing="25dp" >
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dip"
+            android:background="#BB000000"
+            android:gravity="bottom"
+            android:padding="5dp">
 
-            <requestFocus />
+        <us.nineworlds.serenity.widgets.SerenityGallery
+                android:id="@+id/moviePosterGallery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_vertical"
+                android:nextFocusUp="@+id/categoryFilter"
+                android:spacing="25dp">
+
+            <requestFocus/>
         </us.nineworlds.serenity.widgets.SerenityGallery>
     </LinearLayout>
 
     <TextView
-        android:id="@+id/episodeTVSeriesTitle"
-        style="@android:style/TextAppearance.Holo.Large"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/metaDataRow"
-        android:layout_marginLeft="10dp"
-        android:background="#AA000000"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:visibility="gone" />
+            android:id="@+id/episodeTVSeriesTitle"
+            style="@android:style/TextAppearance.Holo.Large"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/metaDataRow"
+            android:layout_marginLeft="10dp"
+            android:background="#AA000000"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:visibility="gone"/>
 
 </RelativeLayout>
