--- a/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -1,120 +1,142 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvshowSeasonBrowserLayout"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/tvshows"
-    android:orientation="vertical"
-    tools:context=".ui.browser.tv.TVShowBrowserActivity" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" >
 
-    <LinearLayout
-        android:id="@+id/metaDataRow"
+    <us.nineworlds.serenity.widgets.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#A0000000"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent" >
 
-        <ImageButton android:id="@+id/menu_button"
-        android:layout_width="wrap_content"
-        android:paddingRight="10dp"
-        android:paddingLeft="5dp"
-        android:layout_height="28dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/menudrawer_selector"
-        android:layout_gravity="center_vertical"
-        android:scaleType="fitXY"
-        />
-        
-        
-        <TextView
-            android:id="@+id/tvShowSeasonsDetailText"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:textColor="#F0F0F0"
-            tools:ignore="SelectableText" >
+        <!-- The main content view -->
 
-        </TextView>
-
-        <TextView
-            android:id="@+id/tvShowSeasonsItemCount"
-            style="@android:style/TextAppearance.Holo.Medium"
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+            android:id="@+id/tvshowSeasonBrowserLayout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:gravity="right"
-            android:textColor="#F0F0F0"
-            tools:ignore="SelectableText" >
-        </TextView>
-    </LinearLayout>
-    
-    <com.jess.ui.TwoWayGridView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/episodeGridView"
-        android:layout_below="@+id/metaDataRow"
-        android:layout_above="@+id/tvShowSeasonTitleRow"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="10dp"
-        android:background="#A0000000"
-        app:cacheColorHint="#E8E8E8"
-        app:gravity="center"
-        app:horizontalSpacing="16dp"
-        app:numColumns="auto_fit"
-        app:numRows="2"
-        app:scrollDirectionLandscape="horizontal"
-        app:scrollDirectionPortrait="vertical"
-        app:stretchMode="spacingWidthUniform"
-        app:rowHeight="120dp"
-        android:focusable="true"
-        android:visibility="gone"
-        android:nextFocusDown="@+id/tvShowSeasonImageGalleryLayout"
-        android:nextFocusLeft="@+id/tvShowSeasonImageGalleryLayout"
-        android:nextFocusRight="@+id/tvShowSeasonImageGalleryLayout" />
-    
+            android:layout_height="match_parent"
+            android:background="@drawable/tvshows"
+            android:orientation="vertical"
+            tools:context=".ui.browser.tv.TVShowBrowserActivity" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#A0000000"
-        android:orientation="horizontal"
-        android:id="@+id/tvShowSeasonTitleRow"
-        android:layout_above="@+id/tvShowSeasonImageGalleryLayout">
-        
-        <TextView
-            android:id="@+id/tvShowSeasonsTitle"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="#F0F0F0"
-            tools:ignore="SelectableText" >
+            <LinearLayout
+                android:id="@+id/metaDataRow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#A0000000"
+                android:orientation="horizontal" >
 
-        </TextView>
-    </LinearLayout>        
-    
-     <LinearLayout
-         android:id="@+id/tvShowSeasonImageGalleryLayout"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:layout_alignParentBottom="true"
-         android:orientation="vertical"
-         android:background="#A0000000"
-         android:layout_marginBottom="10dp" >
+                <ImageButton
+                    android:id="@+id/menu_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="28dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@android:color/transparent"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/menudrawer_selector" />
 
-         <Gallery
-             android:id="@+id/tvShowSeasonImageGallery"
-             android:layout_width="fill_parent"
-             android:layout_height="wrap_content"
-             android:layout_gravity="center|center_vertical"
-             android:animationDuration="1"
-             android:spacing="25dp"
-             android:padding="5dp" >
+                <TextView
+                    android:id="@+id/tvShowSeasonsDetailText"
+                    style="@android:style/TextAppearance.Holo.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#F0F0F0"
+                    tools:ignore="SelectableText" >
+                </TextView>
 
-             <requestFocus />
-         </Gallery>
-     </LinearLayout>
+                <TextView
+                    android:id="@+id/tvShowSeasonsItemCount"
+                    style="@android:style/TextAppearance.Holo.Medium"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:textColor="#F0F0F0"
+                    tools:ignore="SelectableText" >
+                </TextView>
+            </LinearLayout>
 
-</RelativeLayout>
+            <com.jess.ui.TwoWayGridView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/episodeGridView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/tvShowSeasonTitleRow"
+                android:layout_below="@+id/metaDataRow"
+                android:layout_centerHorizontal="true"
+                android:layout_marginRight="10dp"
+                android:background="#A0000000"
+                android:focusable="true"
+                android:nextFocusDown="@+id/tvShowSeasonImageGalleryLayout"
+                android:nextFocusLeft="@+id/tvShowSeasonImageGalleryLayout"
+                android:nextFocusRight="@+id/tvShowSeasonImageGalleryLayout"
+                android:visibility="gone"
+                app:cacheColorHint="#E8E8E8"
+                app:gravity="center"
+                app:horizontalSpacing="16dp"
+                app:numColumns="auto_fit"
+                app:numRows="2"
+                app:rowHeight="120dp"
+                app:scrollDirectionLandscape="horizontal"
+                app:scrollDirectionPortrait="vertical"
+                app:stretchMode="spacingWidthUniform" />
+
+            <LinearLayout
+                android:id="@+id/tvShowSeasonTitleRow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/tvShowSeasonImageGalleryLayout"
+                android:background="#A0000000"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/tvShowSeasonsTitle"
+                    style="@android:style/TextAppearance.Holo.Medium"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="#F0F0F0"
+                    tools:ignore="SelectableText" >
+                </TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/tvShowSeasonImageGalleryLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
+                android:background="#A0000000"
+                android:orientation="vertical" >
+
+                <Gallery
+                    android:id="@+id/tvShowSeasonImageGallery"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|center_vertical"
+                    android:animationDuration="1"
+                    android:padding="5dp"
+                    android:spacing="25dp" >
+
+                    <requestFocus />
+                </Gallery>
+            </LinearLayout>
+        </RelativeLayout>
+
+        <ListView
+            android:id="@+id/left_drawer"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#111"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:focusableInTouchMode="true"
+            android:paddingTop="?android:attr/actionBarSize" />
+    </us.nineworlds.serenity.widgets.DrawerLayout>
+
+</merge>
