--- a/serenity-app/res/layout-xlarge/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout-xlarge/activity_tvbrowser_show_banners.xml
@@ -1,177 +1,203 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tvshowBrowserLayout"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/tvshows"
-    android:orientation="vertical"
-    tools:context=".ui.browser.tv.TVShowBrowserActivity" xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" >
 
-    <LinearLayout
-        android:id="@+id/tvLine1"
+    <us.nineworlds.serenity.widgets.DrawerLayout
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#A0000000"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent" >
 
-        <ImageButton
-            android:id="@+id/menu_button"
-            android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:layout_gravity="center_vertical"
-            android:background="@android:color/transparent"
-            android:paddingLeft="5dp"
-            android:paddingRight="10dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/menudrawer_selector" />
+        <!-- The main content view -->
 
-        <TextView
-            android:id="@+id/tvshow_CategoryName"
-            style="@android:style/TextAppearance.Holo.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:focusable="false"
-            android:text="@string/category" />
-
-        <Spinner
-            android:id="@+id/categoryFilter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/spinner_background"
-            android:focusable="true"
-            android:gravity="left"
-            android:prompt="@string/movie_category_prompt"
-            android:spinnerMode="dropdown" />
-
-        <Spinner
-            android:id="@+id/categoryFilter2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/spinner_background"
-            android:focusable="true"
-            android:gravity="left"
-            android:prompt="@string/movie_category_prompt2"
-            android:spinnerMode="dropdown"
-            android:visibility="invisible" />
-
-        <TextView
-            android:id="@+id/tvShowItemCount"
+        <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+            android:id="@+id/tvshowBrowserLayout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:gravity="right"
-            android:textColor="#F0F0F0"
-            android:textSize="20sp"
-            tools:ignore="SelectableText" >
-        </TextView>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:background="@drawable/tvshows"
+            android:orientation="vertical"
+            tools:context=".ui.browser.tv.TVShowBrowserActivity" >
 
-    <RelativeLayout
-        android:id="@+id/video_details_container"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvLine1"
-        android:layout_centerHorizontal="true"
-        android:background="#A0000000"
-        android:padding="10dp" >
-
-        <us.nineworlds.serenity.widgets.RoundedImageView
-            android:id="@+id/tvShowImage"
-            android:layout_width="300dp"
-            android:layout_height="400dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            app:corner_radius="5dp"
-            app:mutate_background="true"
-            android:layout_margin="5dp" />
-
-        <LinearLayout
-            android:id="@+id/tvmetadata"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_toRightOf="@+id/tvShowImage"
-            android:layout_alignBottom="@+id/tvShowImage"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/tvShowRating"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/tvLine1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dip"
-                android:layout_marginRight="5dip" />
+                android:background="#A0000000"
+                android:orientation="horizontal" >
 
-            <RatingBar
-                android:id="@+id/tvRatingbar"
-                style="?android:attr/ratingBarStyleIndicator"
-                android:layout_width="wrap_content"
+                <ImageButton
+                    android:id="@+id/menu_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="28dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@android:color/transparent"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/menudrawer_selector" />
+
+                <TextView
+                    android:id="@+id/tvshow_CategoryName"
+                    style="@android:style/TextAppearance.Holo.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:focusable="false"
+                    android:text="@string/category" />
+
+                <Spinner
+                    android:id="@+id/categoryFilter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/spinner_background"
+                    android:focusable="true"
+                    android:gravity="left"
+                    android:prompt="@string/movie_category_prompt"
+                    android:spinnerMode="dropdown" />
+
+                <Spinner
+                    android:id="@+id/categoryFilter2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/spinner_background"
+                    android:focusable="true"
+                    android:gravity="left"
+                    android:prompt="@string/movie_category_prompt2"
+                    android:spinnerMode="dropdown"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/tvShowItemCount"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:textColor="#F0F0F0"
+                    android:textSize="20sp"
+                    tools:ignore="SelectableText" >
+                </TextView>
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/video_details_container"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:numStars="4"
-                android:stepSize="0.1" >
-            </RatingBar>
+                android:layout_below="@+id/tvLine1"
+                android:layout_centerHorizontal="true"
+                android:background="#A0000000"
+                android:padding="10dp" >
 
-            <ImageView
-                android:id="@+id/tvShowStudio"
-                android:layout_width="wrap_content"
+                <us.nineworlds.serenity.widgets.RoundedImageView
+                    android:id="@+id/tvShowImage"
+                    android:layout_width="300dp"
+                    android:layout_height="400dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_margin="5dp"
+                    app:corner_radius="5dp"
+                    app:mutate_background="true" />
+
+                <LinearLayout
+                    android:id="@+id/tvmetadata"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/tvShowImage"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_toRightOf="@+id/tvShowImage"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/tvShowRating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dip"
+                        android:layout_marginRight="5dip" />
+
+                    <RatingBar
+                        android:id="@+id/tvRatingbar"
+                        style="?android:attr/ratingBarStyleIndicator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="4"
+                        android:stepSize="0.1" >
+                    </RatingBar>
+
+                    <ImageView
+                        android:id="@+id/tvShowStudio"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dip"
+                        android:layout_marginLeft="15dip"
+                        android:layout_marginRight="10dip" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tvBrowserTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_toRightOf="@+id/tvShowImage"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="10dp"
+                    android:textColor="#F0F0F0"
+                    android:textSize="35sp"
+                    android:textStyle="bold"
+                    tools:ignore="SelectableText" />
+
+                <TextView
+                    android:id="@+id/tvShowSeriesSummary"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvBrowserTitle"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_toRightOf="@+id/tvShowImage"
+                    android:ellipsize="marquee"
+                    android:maxLines="8"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:textColor="#F0F0F0"
+                    android:textSize="22sp"
+                    tools:ignore="SelectableText" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dip"
-                android:layout_marginLeft="15dip"
-                android:layout_marginRight="10dip" />
-        </LinearLayout>
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp"
+                android:background="#A0000000"
+                android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/tvBrowserTitle"
-            android:textSize="35sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_toRightOf="@+id/tvShowImage"
-            android:gravity="left|center_vertical"
-            android:paddingLeft="10dp"
-            android:textColor="#F0F0F0"
-            android:textStyle="bold"
-            tools:ignore="SelectableText" />
+                <Gallery
+                    android:id="@+id/tvShowBannerGallery"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:animationDuration="1"
+                    android:padding="5dp"
+                    android:spacing="10dp" >
 
-        <TextView
-            android:id="@+id/tvShowSeriesSummary"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvBrowserTitle"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_toRightOf="@+id/tvShowImage"
-            android:ellipsize="marquee"
-            android:maxLines="8"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textColor="#F0F0F0"
-            android:textSize="22sp"
-            tools:ignore="SelectableText" />
-    </RelativeLayout>
+                    <requestFocus />
+                </Gallery>
+            </LinearLayout>
+        </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:background="#A0000000"
-        android:orientation="vertical" >
+        <ListView
+            android:id="@+id/left_drawer"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#111"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:focusableInTouchMode="true"
+            android:paddingTop="?android:attr/actionBarSize" />
+    </us.nineworlds.serenity.widgets.DrawerLayout>
 
-        <Gallery
-            android:id="@+id/tvShowBannerGallery"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:animationDuration="1"
-            android:padding="5dp"
-            android:spacing="10dp" >
-
-            <requestFocus />
-        </Gallery>
-    </LinearLayout>
-
-</RelativeLayout>
+</merge>
